# llvm-strategizer

./: README.md
auto-strategizer-benchmarks/: benchmarks.sh
clang/: CMakeLists.txt
llvm/runtimes/: CMakeLists.txt
openmp/: CMakeLists.txt
openmp/libomptarget/: CMakeLists.txt
openmp/libomptarget/DeviceRTL/src/: Tasking.cpp
openmp/libomptarget/include/: omptarget.h
openmp/libomptarget/src/: CMakeLists.txt  StrategizerInterface.h  api.cpp  autoStrategizer.cpp  autoStrategizer.hpp  autoStrategizer_tools.hpp  device.cpp  private.h
openmp/runtime/src/: kmp.h  kmp_runtime.cpp  kmp_tasking.cpp
